flesh out Users views - add respond_to in Users#show

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,27 +1,27 @@
 = form_for @user do |f|
-
-  = f.label :username
-  = f.text_field :username
-
-  = f.label :first_name
-  = f.text_field :first_name
-
-  = f.label :last_name
-  = f.text_field :last_name
-
-  = f.label :email
-  = f.text_field :email
-
-  = f.label :zip
-  = f.text_field :zip
-
-  = f.label :phone
-  = f.text_field :phone
-
-  = f.label :password
-  = f.text_field :password
-
-  = f.label :password_confirmation
-  = f.text_field :password_confirmation
-
-  = f.submit
+  .form-input
+    = f.label :username
+    = f.text_field :username
+  .form-input
+    = f.label :first_name
+    = f.text_field :first_name
+  .form-input
+    = f.label :last_name
+    = f.text_field :last_name
+  .form-input
+    = f.label :email
+    = f.text_field :email
+  .form-input
+    = f.label :zip
+    = f.text_field :zip
+  .form-input
+    = f.label :phone
+    = f.text_field :phone
+  .form-input
+    = f.label :password
+    = f.text_field :password
+  .form-input
+    = f.label :password_confirmation
+    = f.text_field :password_confirmation
+  .form-button
+    = f.submit
