--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,11 @@
 %h1 Users NEW
 
 = render 'form', user: @user
+
+- if current_user
+  %h1
+    CURRENT USER:
+    = current_user.username
+- else
+  %h2
+    No current user
