Let User Claim Seat
Adds logic to the update method for the ride controller that adds a user to a ride if the ride is not full and passes an error to flash to show the user on the ride show page if it is full.

--- a/app/views/rides/show.html.haml
+++ b/app/views/rides/show.html.haml
@@ -1,3 +1,13 @@
 %h1 Your Ride
 
-= @ride.end_point
+
+= "Driver: #{@ride.driver.first_name}"
+%br
+= "Destination: #{@ride.end_point}"
+%br
+= "Seats avaialable: #{@ride.passengers.count}/#{@ride.max_seats}"
+%br
+= link_to(@ride, {}, {method: :put})
+%br
+- if flash[:alert]
+  = flash[:alert]
